[package]
name = "lebe"
version = "0.1.0"
edition = "2018"

description = "Tiny, dead simple, high performance endianness conversions"
categories = ["algorithms", "encoding", "filesystem", "parsing", ]
keywords = ["byteorder", "endianness", "little endian", "big endian", "conversion"]
authors = ["johannesvollmer <johannes596@t-online.de>"]

documentation = "https://docs.rs/crate/lebe/"
repository = "https://github.com/johannesvollmer/lebe"
readme = "README.md"
license = "MIT"

[badges]
maintenance = { status = "actively-maintained" }

[lib]
doctest = true

[features]
simd = []


[dev-dependencies]
bencher = "0.1.5"
byteorder = "1.3.2"

[[bench]]
name = "benches"
harness = false # FIXME what does this mean?

[profile.bench]
lto = true
debug = true